--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/material": "^7.3.6",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "formik": "^2.4.9",
     "next": "16.1.0",
     "react": "19.2.3",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
