--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.23.0",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.9",
     "next": "16.1.0",
     "react": "19.2.3",
