--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "formik": "^2.4.9",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
